--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -1,4 +1,8 @@
 <template>
-   <h1>Filter Form Goes here</h1>
-   <c-student-browser-form></c-student-browser-form>
+  <div class="slds-var-m-bottom_small">
+    <lightning-card title="Filter Students" icon-name="utility:search">
+      <h1>Filter Form Goes here</h1>
+    </lightning-card>
+  </div>
+  
 </template>
