--- a/force-app/Exercises/main/default/lwc/studentBrowser/studentBrowser.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowser/studentBrowser.html
@@ -1,4 +1,5 @@
 <template>
+     <c-student-browser-form></c-student-browser-form>
     <lightning-tabset variant="scoped">
         <lightning-tab label="Gallery">
              Photo gallery of students goes here
