--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -1,7 +1,10 @@
 <template>
   <div class="slds-var-m-bottom_small">
     <lightning-card title="Filter Students" icon-name="utility:search">
-      <h1>Filter Form Goes here</h1>
+      <div class="slds-var-p-horizontal_small">
+        <h1>Filter Form Goes here</h1>
+      </div>
+      
     </lightning-card>
   </div>
   
