--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -1,12 +1,11 @@
 <template>
- 
+  <div class="slds-var-m-bottom_small">
     <lightning-card title="Filter Students" icon-name="utility:search">
       <div class="slds-var-p-horizontal_small">
         <h1 class="crazycomic">Filter Form Goes here</h1>
       </div>
       
     </lightning-card>
-  
-    
+  </div>
   
 </template>
