--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -16,20 +16,30 @@
           </lightning-combobox>
         </lightning-layout-item>
         <!-- Deliveries drop-down -->
-        
-        <lightning-layout-item
-          padding="around-small"
-          size="4"
-        >
-      <lightning-combobox
-          name="deliverySelector"
-          label="Select Delivery"
-          variant="label-hidden"
-          value={selectedDeliveryId}
-          placeholder="Select a delivery"
-          options={deliveries}
-          onchange={onDeliveryChange}>
-        </lightning-combobox></lightning-layout-item>
+
+        <lightning-layout-item padding="around-small" size="4">
+          <lightning-combobox
+            name="deliverySelector"
+            label="Select Delivery"
+            variant="label-hidden"
+            value={selectedDeliveryId}
+            placeholder="Select a delivery"
+            options={deliveries}
+            onchange={onDeliveryChange}
+          >
+          </lightning-combobox
+        ></lightning-layout-item>
+        <!-- Add New Delivery button (enabled if instructor
+selected)-->
+        <lightning-layout-item padding="around-small">
+          <lightning-button
+            variant="brand"
+            disabled={isButtonDisabled}
+            label="Add New Delivery"
+            onclick={onAddNewDelivery}
+          >
+          </lightning-button>
+        </lightning-layout-item>
       </lightning-layout>
     </lightning-card>
   </div>
