--- a/force-app/Exercises/main/default/lwc/studentTiles/studentTiles.html
+++ b/force-app/Exercises/main/default/lwc/studentTiles/studentTiles.html
@@ -13,7 +13,10 @@
         large-device-size="3"
         key={student.Id}
       >
-        <c-student-tile onstudentselected={handleStudentSelected} selected-student-id={selectedStudentId}></c-student-tile>
+        <c-student-tile
+          onstudentselected={handleStudentSelected}
+          selected-student-id={selectedStudentId}
+        ></c-student-tile>
       </lightning-layout-item>
     </template>
   </lightning-layout>
